Resolutions de divers bugs et mise en forme de la version mobile

--- a/style/Boisson.css
+++ b/style/Boisson.css
@@ -8,6 +8,7 @@
     width: 100%;
     margin-top: 10px;
     align-items: center;
+    gap: 30px;
 }
 
 
@@ -23,7 +24,6 @@
     height: 30vw;
     background-color: white;
     border-radius: 30px;
-    margin-right: 30px;
 
 }
 
@@ -90,20 +90,24 @@
     flex-direction: column;
 }
 
-#tableIngredients{
+.tableInfo{
     margin-bottom: 90px;
     border-color: var(--primary-color);
     border: solid 1px;
 }
 
-#tableIngredients a:hover{
+.tableInfo a{
+    font-weight: normal !important;
+}
+
+.tableInfo a:hover{
     color: white;
 }
-#tableIngredients td{
+.tableInfo td{
     text-align: center;
     font-weight: normal;
 }
-#tableIngredients th{
+.tableInfo th{
     border-color: var(--primary-color);
     border: solid 1px;
     width: 33%;
@@ -111,11 +115,11 @@
     text-align: center;
 }
 
-#tableIngredients tbody:nth-child(odd) {
+.tableInfo tbody:nth-child(odd) {
     background-color: #ddb3a1;
 }
 
-#tableIngredients tbody:nth-child(even) {
+.tableInfo tbody:nth-child(even) {
     background-color: var(--accent-color);
 }
 
