--- a/style/Ingredient.css
+++ b/style/Ingredient.css
@@ -1,7 +1,4 @@
-#nomBoisson{
-    color: var(--primary-color);
-    font-weight: bold;
-}
+@import 'Boisson.css';
 
 #listSuper{
     font-size: small;
