--- a/style/base.css
+++ b/style/base.css
@@ -190,7 +190,7 @@ a {
 }
 
 a:hover {
-    color: var(--accent-color);
+    color: white;
 }
 
 .header{
